# automotive-data-analysis-book

./: 404.html  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy.yml
code/: pyproject.toml
data-preprocessing/: data-representation.html  interpolation.html  merging.html  transformation.html
fundamentals/: coordinate_systems.html  geometry.html  time.html  variable_types.html
in-vehicle-networks/: can_bus.html  intro.html
introduction/: license.html  what_is_this_book_about.html
maps/: fundamentals.html  gps.html  open-street-maps.html  projections.html  spatial_indexing.html
perception/: architectures.html  lidar.html  overview.html  radar.html  sensor_fusion.html
src/: SUMMARY.md
src/data-preprocessing/: data-representation.md  interpolation.md  merging.md  transformation.md
src/fundamentals/: basic_glyphs.md  coordinate_systems.md  geometry.md  time.md  variable_types.md
src/in-vehicle-networks/: intro.md
src/introduction/: license.md  what_is_this_book_about.md
src/maps/: fundamentals.md  open-street-maps.md  spatial_indexing.md
src/perception/: architectures.md  overview.md  radar.md
src/transformations/: implementation.md  motivation.md  rotation.md  time.md  transformation-matrix.md  transformation-tree.md  transformation.md
transformations/: implementation.html  motivation.html  rotation.html  time.html  transformation-matrix.html  transformation-tree.html
