[tool.poetry]
name = "code-for-book"
version = "0.1.0"
description = ""
authors = ["Marat Kopytjuk <kopytjuk@gmail.com>"]
readme = "README.md"
packages = [{include = "code_for_book"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
ipython = "^8.13.2"
ipykernel = "^6.23.1"
requests = "^2.30.0"
geopandas = "^0.13.0"
folium = "^0.14.0"
scipy = "^1.10.1"
pytransform3d = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
